--- a/app/blocks/catalog-filter/catalog-filter.twig
+++ b/app/blocks/catalog-filter/catalog-filter.twig
@@ -129,27 +129,33 @@
               items: [
                 {
                   color: "red",
-                  text: "Красный"
+                  text: "Красный",
+                  alert: ""
                 },
                 {
                   color: "black",
-                  text: "Черный"
+                  text: "Черный",
+                  alert: ""
                 },
                 {
                   color: "green",
-                  text: "Зеленый"
+                  text: "Зеленый",
+                  alert: ""
                 },
                 {
                   color: "purple",
-                  text: "Фиолетовый"
+                  text: "Фиолетовый",
+                  alert: ""
                 },
                 {
                   color: "blue",
-                  text: "Синий"
+                  text: "Синий",
+                  alert: ""
                 },
                 {
                   color: "yellow",
-                  text: "Желтый"
+                  text: "Желтый",
+                  alert: ""
                 },
               ]
             }
