--- a/app/blocks/viewed-products/viewed-products.twig
+++ b/app/blocks/viewed-products/viewed-products.twig
@@ -1,5 +1,5 @@
 <section class="pb15">
-  <h2 class="section-title">Просмотренные товары</h2>
+  <h2 class="section-title">{{ title }}</h2>
   <div class="swiper js-viewed-products-slider viewed-products-slider">
     <div class="swiper-wrapper">
       {% include "../product-card/product-card.twig" with {
