--- a/app/pages/basket.twig
+++ b/app/pages/basket.twig
@@ -74,7 +74,9 @@
         } %}
       </div>
     </section>
-    {% include "../blocks/viewed-products/viewed-products.twig" %}
+    {% include "../blocks/viewed-products/viewed-products.twig" with {
+      title: "Просмотренные товары",
+    } %}
   </div>
 </main>
 {% include "../blocks/footer/footer.twig" %}
