--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -3,27 +3,6 @@
   <div class="container">
     <ul class="progress__list">
       <li class="progress__item">
-        <a class="progress__link" href="./header.html" target="_blank">Хэдер до авторизации</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./header-auth.html" target="_blank">Хэдер после авторизации</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./signup.html" target="_blank">Попап регистрация</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./signin.html" target="_blank">Попап авторизация</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./passw-recovery.html" target="_blank">Попап восстановление пароля</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./ordering-popup.html" target="_blank">Попап оформления заказа</a>
-      </li>
-      <li class="progress__item">
-        <a class="progress__link" href="./callback-popup.html" target="_blank">Попап обратная связь</a>
-      </li>
-      <li class="progress__item">
         <a class="progress__link" href="./main.html" target="_blank">Главная</a>
       </li>
       <li class="progress__item">
@@ -67,6 +46,33 @@
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./404.html" target="_blank">404</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./header.html" target="_blank">Хэдер до авторизации</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./header-auth.html" target="_blank">Хэдер после авторизации</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./signup.html" target="_blank">Попап регистрация</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./signin.html" target="_blank">Попап авторизация</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./passw-recovery.html" target="_blank">Попап восстановление пароля</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./ordering-popup.html" target="_blank">Попап оформления заказа</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./callback-popup.html" target="_blank">Попап обратная связь</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./table-size.html" target="_blank">Попап с таблицей размеров</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./review-popup.html" target="_blank">Попап с отзывом</a>
       </li>
     </ul>
   </div>
