--- a/app/blocks/header/header.twig
+++ b/app/blocks/header/header.twig
@@ -1,14 +1,14 @@
 <header class="header">
   <div class="container header__container">
-    <div class="header__burger">
-      <span class="header__burger-item"></span>
-      <span class="header__burger-item"></span>
-      <span class="header__burger-item"></span>
-    </div>
     <div class="header__start">
       <a class="header__logo-link" href="#">
         <img class="header__logo" src="./assets/images/icons/logo.svg" alt="logo">
       </a>
+    </div>
+    <div class="header__burger js-burger">
+      <span class="header__burger-item"></span>
+      <span class="header__burger-item"></span>
+      <span class="header__burger-item"></span>
     </div>
     <div class="header__center">
       <nav class="header__menu">
