--- a/app/pages/partners.twig
+++ b/app/pages/partners.twig
@@ -266,56 +266,7 @@
     </section>
     <section class="partners__brands pb15">
       <h2 class="partners__brands-title">Больше <span>500</span> брендов уже с нами</h2>
-      <div class="swiper js-brands-slider partners__brands-slider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand1.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand1.jpg" alt="img">
-            </picture>
-          </div>
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand2.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand2.jpg" alt="img">
-            </picture>
-          </div>
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand3.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand3.jpg" alt="img">
-            </picture>
-          </div>
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand4.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand4.jpg" alt="img">
-            </picture>
-          </div>
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand5.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand5.jpg" alt="img">
-            </picture>
-          </div>
-          <div class="swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/partners/brand6.webp">
-              <img class="lazy partners__brands-img" src="./assets/images/pixel.png" data-src="./assets/images/partners/brand6.jpg" alt="img">
-            </picture>
-          </div>
-        </div>
-        <div class="swiper-button-next">
-          <svg class="partners__service-arrow" viewBox="0 0 100 100">
-            <use xlink:href="./assets/images/sprite.svg#arrow-next"></use>
-          </svg>
-        </div>
-        <div class="swiper-button-prev">
-          <svg class="partners__service-arrow" viewBox="0 0 100 100">
-            <use xlink:href="./assets/images/sprite.svg#arrow-prev"></use>
-          </svg>
-        </div>
-      </div>
+      {% include "../blocks/brands-slider/brands-slider.twig" %}
     </section>
   </div>
 </main>
