--- a/app/pages/main.twig
+++ b/app/pages/main.twig
@@ -22,7 +22,7 @@
   <section class="main__collections">
     <div class="second-container">
       <div class="main__collections-wrap">
-        <div class="main__collection">
+        <div class="main__collection js-collection">
           <div class="main__collection-img">
             <picture>
               <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/main/03.webp">
@@ -47,7 +47,7 @@
             </ul>
           </div>
         </div>
-        <div class="main__collection">
+        <div class="main__collection js-collection">
           <div class="main__collection-img">
             <picture>
               <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/main/04.webp">
@@ -80,14 +80,14 @@
       <div class="main__trends-wrap">
         <picture>
           <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/main/05.webp">
-          <img class="lazy main__trends-img" src="./assets/images/pixel.png" data-src="./assets/images/main/05.jpg" alt="img">
+          <img class="lazy main__trends-img js-trends-img" src="./assets/images/pixel.png" data-src="./assets/images/main/05.jpg" alt="img">
         </picture>
         <div class="main__trends-content">
-          <h2 class="main__trends-title">Тренды сезона</h2>
-          <div class="main__trends-descr">
+          <h2 class="main__trends-title js-trends">Тренды сезона</h2>
+          <div class="main__trends-descr js-trends">
             Мода циклична, а модные тенденции часто делают “круг почета”. Вот и сапоги-чулки и ботфорты вновь маршировали по всем Неделям моды - вдохновение для осенне-зимних образов можно черпать у Saint Laurent и Valentino
           </div>
-          <a href="#" class="main__trends-link">
+          <a href="#" class="main__trends-link js-trends">
             <svg class="main__trends-icon" viewBox="0 0 100 100">
               <use xlink:href="./assets/images/sprite.svg#arrow"></use>
             </svg>
