--- a/app/blocks/link/link.twig
+++ b/app/blocks/link/link.twig
@@ -7,6 +7,8 @@
 <script src="./assets/libs/js/nouislider.min.js"></script>
 <script src="./assets/libs/js/wNumb.min.js"></script>
 <script src="./assets/libs/js/glightbox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 <script src="./assets/scripts/app.min.js"></script>
 </body>
 </html>
